Made simple clean up of code. Hopefully this will be the beginning of an ongoing task for this project <8^) .